@@ -20,14 +20,10 @@
 package com.keepassdroid.search;
 
 import java.util.ArrayList;
-import java.util.List;
-import java.util.UUID;
+import java.util.Iterator;
 
-import android.content.ContentValues;
 import android.content.Context;
 import android.content.SharedPreferences;
-import android.database.Cursor;
-import android.database.SQLException;
 import android.database.sqlite.SQLiteDatabase;
 import android.database.sqlite.SQLiteOpenHelper;
 import android.preference.PreferenceManager;
@@ -35,7 +31,6 @@ import android.util.Log;
 
 import com.android.keepass.R;
 import com.keepassdroid.Database;
-import com.keepassdroid.database.PwDatabase;
 import com.keepassdroid.database.PwDatabaseV3;
 import com.keepassdroid.database.PwDatabaseV4;
 import com.keepassdroid.database.PwEntry;
@@ -46,30 +41,12 @@ import com.keepassdroid.database.PwGroupV4;
 public class SearchDbHelper {
 	private static final String DATABASE_NAME = "search";
 	private static final String SEARCH_TABLE = "entries";
-	private static final int DATABASE_VERSION = 3;
-	
-	private static final String KEY_UUID = "uuid";
-	private static final String KEY_TITLE = "title";
-	private static final String KEY_URL = "url";
-	private static final String KEY_USERNAME = "username";
-	private static final String KEY_COMMENT = "comment";
-
-	private static final String DATABASE_CREATE = 
-		"create virtual table " + SEARCH_TABLE + " using FTS3( " 
-		+ KEY_UUID + ", "
-		+ KEY_TITLE + ", " 
-		+ KEY_URL + ", "
-		+ KEY_USERNAME + ", "
-		+ KEY_COMMENT + ");";
+	private static final int DATABASE_VERSION = 4;
 	
 	private static final String DATABASE_DROP =
 		"drop table " + SEARCH_TABLE;
 	
-	private static final String PRAGMA_NO_SYNCHRONOUS = "pragma synchronous = off;";
-	
 	private final Context mCtx;
-	private DatabaseHelper mDbHelper;
-	private SQLiteDatabase mDb;
 	private boolean isOmitBackup;
 	
 	private static class DatabaseHelper extends SQLiteOpenHelper {
@@ -80,14 +57,12 @@ public class SearchDbHelper {
 
 		@Override
 		public void onCreate(SQLiteDatabase db) {
-			db.execSQL(DATABASE_CREATE);
 		}
 
 		@Override
 		public void onUpgrade(SQLiteDatabase db, int oldVersion, int newVersion) {
 			if (oldVersion != DATABASE_VERSION) {
 				db.execSQL(DATABASE_DROP);
-				db.execSQL(DATABASE_CREATE);
 			}
 		}
 		
@@ -95,6 +70,12 @@ public class SearchDbHelper {
 	
 	public SearchDbHelper(Context ctx) {
 		mCtx = ctx;
+		
+		// Delete old database if it is still there
+		DatabaseHelper dbHelper = new DatabaseHelper(ctx);
+		SQLiteDatabase db = dbHelper.getWritableDatabase();
+		db.close();
+		
 		initOmitBackup();
 	}
 	
@@ -104,78 +85,7 @@ public class SearchDbHelper {
 		
 	}
 	
-	public SearchDbHelper open() throws SQLException {
-		mDbHelper = new DatabaseHelper(mCtx);
-		mDb = mDbHelper.getWritableDatabase();
-		mDb.execSQL(PRAGMA_NO_SYNCHRONOUS);
-		return this;
-	}
-	
-	public void close() {
-		mDb.close();
-	}
-
-	public void clear() {
-		mDb.delete(SEARCH_TABLE, null, null);
-		initOmitBackup();
-	}
-
-	private ContentValues buildNewEntryContent(PwDatabase db, PwEntry entry) {
-
-		ContentValues cv = new ContentValues();
-		UUID uuid = entry.getUUID();
-		String uuidStr = uuid.toString();
-		
-		cv.put(KEY_UUID, uuidStr);
-		cv.put(KEY_TITLE, entry.getTitle());
-		cv.put(KEY_URL, entry.getUrl());
-		cv.put(KEY_USERNAME, entry.getUsername());
-		cv.put(KEY_COMMENT, entry.getNotes());
-		
-		return cv;
-	}
-	
-	public void insertEntry(PwDatabase db, PwEntry entry) {
-		if (!isOmitBackup || !db.isBackup(entry.getParent())) {
-			ContentValues cv = buildNewEntryContent(db, entry);
-			mDb.insert(SEARCH_TABLE, null, cv);
-		}
-	}
-	
-	public void insertEntry(PwDatabase db, List<? extends PwEntry> entries) {
-		mDb.beginTransaction();
-
-		try {
-			for (int i=0; i < entries.size(); i++) {
-				insertEntry(db, entries.get(i));
-			}
-			mDb.setTransactionSuccessful();
-		} finally {
-			mDb.endTransaction();
-		}
-	}
-	
-	public void updateEntry(PwDatabase db, PwEntry entry) {
-		ContentValues cv = buildNewEntryContent(db, entry);
-		String uuidStr = cv.getAsString(KEY_UUID);
-		
-		mDb.update(SEARCH_TABLE, cv, KEY_UUID + " = ?", new String[] {uuidStr});
-	}
-	
-	public void deleteEntry(PwEntry entry) {
-		UUID uuid = entry.getUUID();
-		String uuidStr = uuid.toString();
-		
-		mDb.delete(SEARCH_TABLE, KEY_UUID + " = ?", new String[] {uuidStr});
-	}
-	
 	public PwGroup search(Database db, String qStr) {
-		Cursor cursor;
-		String queryWithWildCard = addWildCard(qStr);
-		
-		cursor = mDb.query(true, SEARCH_TABLE, new String[] {KEY_UUID}, SEARCH_TABLE + " match ?", 
-				new String[] {queryWithWildCard}, null, null, null, null);
-		
 
 		PwGroup group;
 		if ( db.pm instanceof PwDatabaseV3 ) {
@@ -189,32 +99,24 @@ public class SearchDbHelper {
 		group.name = "Search results";
 		group.childEntries = new ArrayList<PwEntry>();
 		
-		cursor.moveToFirst();
-		while ( ! cursor.isAfterLast() ) {
-			String sUUID = cursor.getString(0);
-			UUID uuid = UUID.fromString(sUUID);
-			Log.d("TAG", uuid.toString()); 
-			PwEntry entry = (PwEntry) db.entries.get(uuid);
-			group.childEntries.add(entry);
+		// Search all entries
+		qStr = qStr.toLowerCase();
+		for (PwEntry entry : db.pm.getEntries()) {
 			
-			cursor.moveToNext();
+			if (!isOmitBackup || !db.pm.isBackup(entry.getParent())) {
+				// Search all strings in the entry
+				Iterator<String> iter = entry.stringIterator();
+				while (iter.hasNext()) {
+					String str = iter.next().toLowerCase();
+					if (str.contains(qStr)) {
+						group.childEntries.add(entry);
+						break;
+					}
+				}
+			}
+			
 		}
-		
-		cursor.close();
 		
 		return group;
 	}
-
-	private String addWildCard(String qStr) {
-		String result = new String(qStr);
-		if (qStr.endsWith("\"") || qStr.endsWith("*")) {
-			// Do Nothing
-		}
-		else if (qStr.endsWith("%")){
-			result = result.substring(0, result.length()-1);
-		}
-		result = result + "*";
-		return result;
-	}
-	
 }
