@@ -1,5 +1,6 @@
   * Add Japanese translations from Masahiro Inamura
   * Fix issue 183 and 199 from Riksa
+  * Change search to work in memory
 
 KeePassDroid (1.9.3.1)
   * Update Italian translations
